--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+
     <string name="app_name">Quake Report</string>
     <string name="near_the">Near the</string>
+    <string name="no_internet">No Internet Connection</string>
+    <string name="no_data">NO EARTHQUAKES FOUND</string>
 
 </resources>
